--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,16 +47,19 @@ dependencies:
   pinput: ^2.2.16
   lottie: ^1.0.1
   flutter_snake_navigationbar: ^0.6.1
-  stream_chat_flutter: ^5.1.0
-  google_maps_flutter: ^2.2.1
-  google_maps_webservice: ^0.0.19
-  google_api_headers: ^1.3.0
-  flutter_google_places_hoc081098: ^1.1.0
   text_form_field_wrapper: ^1.0.0
   linear_step_indicator: ^1.0.0+3
   expandable_text: ^2.3.0
   csc_picker: ^0.2.6
   datepicker_dropdown: ^0.0.7+2
+  date_ranger: ^0.0.2
+  dropdown_button2: ^1.9.2
+  multi_select_flutter: ^4.1.3
+  syncfusion_flutter_datepicker: ^20.3.61
+  flutter_map_marker_cluster: ^1.0.1
+  flutter_map: ^3.1.0
+  latlong2: ^0.8.1
+  scrollable_positioned_list: ^0.3.5
 
 
 dev_dependencies:
@@ -89,6 +92,7 @@ flutter:
   assets:
     - assets/
     - assets/images/
+    - assets/lotties/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
