--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,6 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -60,7 +59,9 @@ dependencies:
   flutter_map: ^3.1.0
   latlong2: ^0.8.1
   scrollable_positioned_list: ^0.3.5
-
+  syncfusion_flutter_sliders: ^20.4.41
+  syncfusion_flutter_gauges: ^20.4.41
+  signature: ^5.3.0
 
 dev_dependencies:
   flutter_test:
@@ -93,6 +94,7 @@ flutter:
     - assets/
     - assets/images/
     - assets/lotties/
+    - assets/lotties/zip/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
