--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,9 @@ dependencies:
   syncfusion_flutter_sliders: ^20.4.41
   syncfusion_flutter_gauges: ^20.4.41
   signature: ^5.3.0
+  firebase_core: ^2.4.1
+  http: ^0.13.5
+  dio: ^4.0.6
 
 dev_dependencies:
   flutter_test:
@@ -95,6 +98,7 @@ flutter:
     - assets/images/
     - assets/lotties/
     - assets/lotties/zip/
+    - assets/svg/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
