--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,9 @@ dependencies:
   firebase_core: ^2.4.1
   http: ^0.13.5
   dio: ^4.0.6
+  google_sign_in: ^5.4.4
+  flutter_onboarding_slider: ^1.0.8
+  json_annotation: ^4.8.0
 
 dev_dependencies:
   flutter_test:
@@ -76,6 +79,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  build_runner: ^2.3.3
+  json_serializable: ^6.6.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
