--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,9 @@ dependencies:
   google_sign_in: ^5.4.4
   flutter_onboarding_slider: ^1.0.8
   json_annotation: ^4.8.0
+  cached_network_image: ^3.2.3
+  shimmer: ^2.0.0
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
