--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -90,7 +90,7 @@ dev_dependencies:
 flutter_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/images/logo-splash.png"
+  image_path: "assets/images/logo_G.png"
   min_sdk_android: 21
 # The following section is specific to Flutter packages.
 flutter:
