--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,7 @@ dependencies:
   cached_network_image: ^3.2.3
   shimmer: ^2.0.0
   carousel_slider: ^4.2.1
+  sign_in_with_apple: ^4.3.0
 
 dev_dependencies:
   flutter_test:
