fix: adding upload photo

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -63,5 +63,8 @@
     <string>I need this permission to upload photo</string>
     <key>NSPhotoLibraryUsageDescription</key>
     <string>I need this permission to upload photo</string>
+    <key>NSAppleMusicUsageDescription</key>
+    <string>I need this permission to upload photo</string>
+
 </dict>
 </plist>
