--- a/ios/Podfile
+++ b/ios/Podfile
@@ -37,15 +37,19 @@ end
 post_install do |installer|
   installer.pods_project.targets.each do |target|
     flutter_additional_ios_build_settings(target)
-    target.build_configurations.each do |config|
-          # You can remove unused permissions here
-          # e.g. when you don't need camera permission, just add 'PERMISSION_CAMERA=0'
-          config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= [
-            '$(inherited)',
-            'PERMISSION_CAMERA=1',
-            'PERMISSION_PHOTOS=1',
-            'PERMISSION_MEDIA_LIBRARY=1',
-          ]
+        target.build_configurations.each do |config|
+            project.targets.each do |target|
+                target.build_configurations.each do |config|
+                    config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '11.0'
+
+                     config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= [
+                        '$(inherited)',
+                        'PERMISSION_CAMERA=1',
+                        'PERMISSION_PHOTOS=1',
+                        'PERMISSION_MEDIA_LIBRARY=1',
+                     ]
+              end
+           end
         end
   end
 end
