--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   get: ^4.6.5
+  get_it: ^7.1.3
   get_storage: ^2.0.3
   font_awesome_flutter: ^10.2.1
   provider: ^6.0.4
@@ -41,8 +42,10 @@ dependencies:
   scrollable_positioned_list: ^0.3.5
   syncfusion_flutter_sliders: ^20.4.41
   syncfusion_flutter_gauges: ^20.4.41
+  url_launcher: ^6.1.10
   signature: ^5.3.0
   firebase_core: ^2.4.1
+  firebase_auth: ^4.3.0
   http: ^0.13.5
   dio: ^4.0.6
   google_sign_in: ^5.4.4
@@ -57,12 +60,13 @@ dependencies:
   permission_handler: ^10.2.0
   image_cropper: ^3.0.1
   http_parser: ^4.0.2
+  country_code_picker: ^3.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_launcher_icons: ^0.11.0
-  # The "flutter_lints" package below contains-analysis options that
+  # The "flutter_lints" package below qqwcontains-analysis options that
   flutter_lints: ^2.0.0
   build_runner: ^2.3.3
   json_serializable: ^6.6.0
