--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,9 @@ dependencies:
   http_parser: ^4.0.2
   country_code_picker: ^3.0.0
   socket_io_client: ^2.0.0-beta.4-nullsafety.0
+  mask_text_input_formatter: ^2.4.0
+  flutter_localizations:
+    sdk: flutter
 
 dev_dependencies:
   flutter_test:
