--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,8 @@ dependencies:
   http_parser: ^4.0.2
   country_code_picker: ^3.0.0
   socket_io_client: ^2.0.0-beta.4-nullsafety.0
+  flutter_stripe: ^9.0.0+1
+  webview_flutter: ^4.0.7
 
 dev_dependencies:
   flutter_test:
