--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
     sdk: flutter
   flutter_stripe: ^9.0.0+1
   webview_flutter: ^4.0.7
+  syncfusion_flutter_pdfviewer:
 
 dev_dependencies:
   flutter_test:
